refactor coreprotect calls